Cherry-pick 310202@main (1729470dcaa6). https://bugs.webkit.org/show_bug.cgi?id=311037

[GTK] SkImage leaked in webkit_favicon_database_get_favicon_finish()
    https://bugs.webkit.org/show_bug.cgi?id=311037

    Reviewed by Fujii Hironori.

    The call to the g_task_propagate_pointer() function used to obtain the
    SkImage for a favicon moves the ownership to the caller; but the
    reference was not being accounted for. Adopt the reference into a sk_sp
    to ensure that it gets dropped at the end of the scope, this avoiding
    the leak of the SkImage.

    * Source/WebKit/UIProcess/API/glib/WebKitFaviconDatabase.cpp:
    (webkit_favicon_database_get_favicon_finish):

    Canonical link: https://commits.webkit.org/310202@main

Canonical link: https://commits.webkit.org/298234.517@webkitglib/2.50